==> Violin9906/edgetx/radio/src/targets/common/arm/gd32/gd32_adc.cpp <==
#include "gd32_adc.h"
#include "memory_sections.h"
#include "gd32_dma.h"
#include "gd32_gpio_driver.h"
#include "gd32_stdlib.h"
#include "timers_driver.h"
#include "debug.h"
#include <string.h>
#include "FreeRTOSConfig.h"
#define OVERSAMPLING 4
#define SAMPLING_TIMEOUT_US 200
#define ADC_IRQ_PRIO   configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY
#define _ENABLE_EOCIE(ADCx) SET_BIT(ADCx->CTL0, ADC_CTL0_EOCIE)
#define _DISABLE_EOCIE(ADCx) CLEAR_BIT(ADCx->CTL0, ADC_CTL0_EOCIE)
#define _START_ADC_SINGLE(ADCx) SET_BIT(ADCx->CTL1, ADC_CTL1_SWSTART)
#define _START_ADC_DMA(ADCx) SET_BIT(ADCx->CTL1, ADC_CTL1_SWSTART | ADC_CTL1_DMA)
#define _CLEAR_ADC_STATUS(ADCx) CLEAR_BIT(ADCx->STAT, ADC_STAT_STRC | ADC_STAT_EOC | ADC_STAT_WDE)

bool isVBatBridgeEnabled()
{
  // && !(_adc_inhibit_mask & (1 << channel));
  // return LL_ADC_GetCommonPathInternalCh(__LL_ADC_COMMON_INSTANCE(VBAT_ADC)) == LL_ADC_PATH_INTERNAL_VBAT;
  return !!READ_BIT(((ADC_TypeDef *)VBAT_ADC)->CTL1, ADC_CTL1_VBETEN)
}

static void adc_enable_clock(ADC_TypeDef* ADCx)
{
#if defined(RCU_APB2EN_ADCEN)
rcu_periph_clock_enable(RCU_ADC);
rcu_adc_clock_config(RCU_ADCCK_APB2_DIV6);
#else
# warning "Unknown ADC clock enable"
#endif
}

static void adc_setup_scan_mode(ADC_TypeDef* ADCx, uint8_t nconv)
{
  // ADC must be disabled for the functions used here

  LL_ADC_InitTypeDef adcInit;
  LL_ADC_StructInit(&adcInit);

  LL_ADC_REG_InitTypeDef adcRegInit;
  LL_ADC_REG_StructInit(&adcRegInit);

#if !defined(STM32H7) && !defined(STM32H7RS)
  if (nconv > 1) {
    adcInit.SequencersScanMode = LL_ADC_SEQ_SCAN_ENABLE;
  } else {
    adcInit.SequencersScanMode = LL_ADC_SEQ_SCAN_DISABLE;
  }
#endif

#if !defined(STM32H7)
  adcInit.DataAlignment = LL_ADC_DATA_ALIGN_RIGHT;
#endif


#if defined(STM32H7) || defined(STM32H7RS)
  /* - Exit from deep-power-down mode and ADC voltage regulator enable        */
  if (LL_ADC_IsDeepPowerDownEnabled(ADCx) != 0UL)
  {
    /* Disable ADC deep power down mode */
    LL_ADC_DisableDeepPowerDown(ADCx);

    /* System was in deep power down mode, calibration must
     be relaunched or a previously saved calibration factor
     re-applied once the ADC voltage regulator is enabled */
  }

  if (LL_ADC_IsInternalRegulatorEnabled(ADCx) == 0UL)
  {
    /* Enable ADC internal voltage regulator */
    LL_ADC_EnableInternalRegulator(ADCx);

    /* Note: Variable divided by 2 to compensate partially              */
    /*       CPU processing cycles, scaling in us split to not          */
    /*       exceed 32 bits register capacity and handle low frequency. */
    uint32_t wait_loop_index = ((LL_ADC_DELAY_INTERNAL_REGUL_STAB_US / 10UL) *
                                ((SystemCoreClock / (100000UL * 2UL)) + 1UL));
    while (wait_loop_index != 0UL) {
      wait_loop_index--;
    }
  }

  /* Start ADC calibration in mode single-ended or differential */
#if defined(STM32H7RS)
  LL_ADC_StartCalibration(ADCx, LL_ADC_SINGLE_ENDED);
#else
  LL_ADC_StartCalibration(ADCx, LL_ADC_CALIB_OFFSET_LINEARITY, LL_ADC_SINGLE_ENDED);
#endif

  /* Wait for calibration completion */
  while (LL_ADC_IsCalibrationOnGoing(ADCx) != 0UL);
#endif

#if defined(LL_ADC_RESOLUTION_12B_OPT)
  adcInit.Resolution = LL_ADC_RESOLUTION_12B_OPT;
#else
  adcInit.Resolution = LL_ADC_RESOLUTION_12B;
#endif
  LL_ADC_Init(ADCx, &adcInit);

  adcRegInit.TriggerSource = LL_ADC_REG_TRIG_SOFTWARE;
  adcRegInit.ContinuousMode = LL_ADC_REG_CONV_SINGLE;

  if (nconv > 1) {
    adcRegInit.SequencerLength = (nconv - 1) << ADC_SQR1_L_Pos;
#if defined(STM32H7)
    adcRegInit.DataTransferMode = LL_ADC_REG_DMA_TRANSFER_LIMITED;
#else
    adcRegInit.DMATransfer = LL_ADC_REG_DMA_TRANSFER_LIMITED;
#endif
  }

#if defined(STM32H7RS) || defined(STM32H7) || defined(STM32H5)
  // set hardware oversampling
  if (!_adc_oversampling_disabled) {
    LL_ADC_ConfigOverSamplingRatioShift(ADCx, 16, LL_ADC_OVS_SHIFT_RIGHT_4);
    LL_ADC_SetOverSamplingScope(ADCx, LL_ADC_OVS_GRP_REGULAR_CONTINUED);
  }
#endif

  LL_ADC_REG_Init(ADCx, &adcRegInit);

  // Enable ADC
#if defined(STM32H7RS) || defined(STM32H7)
  LL_ADC_ClearFlag_ADRDY(ADCx);
  LL_ADC_Enable(ADCx);
  while(!LL_ADC_IsActiveFlag_ADRDY(ADCx)) {
    if (!LL_ADC_IsEnabled(ADCx)) LL_ADC_Enable(ADCx);
  }
#else
  LL_ADC_Enable(ADCx);  
#endif
}

bool stm32_hal_adc_init(const stm32_adc_t* ADCs, uint8_t n_ADC,
                        const stm32_adc_input_t* inputs,
                        const stm32_adc_gpio_t* ADC_GPIOs, uint8_t n_GPIO)
{
  _adc_input_mask = 0;
  _adc_inhibit_mask = 0;
  _adc_oversampling_disabled = 0;

  adc_init_pins(ADC_GPIOs, n_GPIO);
  memset(_adc_dma_buffer, 0, sizeof(_adc_dma_buffer));

  // Init common to all ADCs
  LL_ADC_CommonInitTypeDef commonInit;
  LL_ADC_CommonStructInit(&commonInit);

#if defined(LL_ADC_CLOCK_ASYNC_DIV4)
  // H7 and H7RS use their own clock
  commonInit.CommonClock = LL_ADC_CLOCK_ASYNC_DIV4;
#else
  // others can only use the peripheral clock
  commonInit.CommonClock = LL_ADC_CLOCK_SYNC_PCLK_DIV4;
#endif

  _adc_input_mask = 0;
  const stm32_adc_t* adc = ADCs;

  while (n_ADC > 0) {

    uint8_t nconv = adc->n_channels;
    if (nconv > 0) {

      // enable common instance
      LL_ADC_CommonInit(__LL_ADC_COMMON_INSTANCE(adc->ADCx), &commonInit);
  
      // enable periph clock
      adc_enable_clock(adc->ADCx);
  
      // configure each channel
      const uint8_t* chan = adc->channels;
      nconv = adc_init_channels(adc, inputs, chan, nconv);
      adc_setup_scan_mode(adc->ADCx, nconv);

      if (nconv > 1) {
        if (adc->DMAx) {
          uint16_t* dma_buffer = _adc_dma_buffer + adc->offset;
          if (!adc_init_dma_stream(adc->ADCx, adc->DMAx, adc->DMA_Stream,
                                   adc->DMA_Channel, dma_buffer, nconv))
            return false;

          NVIC_SetPriority(adc->DMA_Stream_IRQn, ADC_IRQ_PRIO);
          NVIC_EnableIRQ(adc->DMA_Stream_IRQn);
        } else {
          // multiple channels on the same ADC
          // without a DMA is NOT supported
          return false;
        }
      } else {
        // single conversion
#if defined(STM32H7)
        if (adc->ADCx == ADC3) {
          NVIC_SetPriority(ADC3_IRQn, ADC_IRQ_PRIO);
          NVIC_EnableIRQ(ADC3_IRQn);
        } else {
          NVIC_SetPriority(ADC_IRQn, ADC_IRQ_PRIO);
          NVIC_EnableIRQ(ADC_IRQn);
        }
#else

#if defined(STM32H7RS)
#  define ADC_IRQn ADC1_2_IRQn
#endif
        NVIC_SetPriority(ADC_IRQn, ADC_IRQ_PRIO);
        NVIC_EnableIRQ(ADC_IRQn);
#endif
      }
    }

    // move to next ADC definition
    adc++; n_ADC--;
  }

  return true;
}

static void adc_start_dma_conversion(const stm32_adc_t* adc)
{
  ADC_TypeDef* ADCx = adc->ADCx;
  DMA_TypeDef* DMAx = adc->DMAx;
  uint32_t stream = adc->DMA_Stream;

  // Clear Interrupt flags
  adc_dma_clear_flags(DMAx, stream);

  // Clear ADC status register & disable ADC IRQ
  _CLEAR_ADC_STATUS(ADCx);
  _DISABLE_EOCIE(ADCx);

  // Enable DMA
#if defined(STM32H7RS)
  // transfer length must be configured for every transfer
  uint32_t seq_len = LL_ADC_REG_GetSequencerLength(ADCx) + 1;
  LL_DMA_SetBlkDataLength(DMAx, stream, seq_len * 2);

  uint16_t* dest_addr = _adc_dma_buffer + adc->offset;
  LL_DMA_SetDestAddress(DMAx, stream, (intptr_t)dest_addr);

  DMA_Channel_TypeDef* ch = _dma_get_stream(DMAx, stream);
  SET_BIT(ch->CCR, DMA_CCR_TCIE | DMA_CCR_DTEIE);
  SET_BIT(ch->CCR, DMA_CCR_EN);
#else
  DMA_Stream_TypeDef* dma_stream = _dma_get_stream(DMAx, stream);
  SET_BIT(dma_stream->CR, DMA_SxCR_TCIE | DMA_SxCR_TEIE | DMA_SxCR_DMEIE);
  SET_BIT(dma_stream->CR, DMA_SxCR_EN);
#endif

  // Trigger ADC start
  _START_ADC_DMA(ADCx);
}

static void adc_start_normal_conversion(ADC_TypeDef* ADCx)
{
  // clear status flags
  _CLEAR_ADC_STATUS(ADCx);

  // enble ADC IRQ
  _ENABLE_EOCIE(ADCx);

  // and start!
  _START_ADC_SINGLE(ADCx);
}

void stm32_hal_adc_isr(const stm32_adc_t* adc)
{
  // check if this ADC triggered the IRQ
  auto ADCx = adc->ADCx;
#if defined(STM32H7) || defined(STM32H7RS)
  if (!LL_ADC_IsActiveFlag_EOC(ADCx) || !LL_ADC_IsEnabledIT_EOC(ADCx))
    return;
#else
  if (!LL_ADC_IsActiveFlag_EOCS(ADCx) || !LL_ADC_IsEnabledIT_EOCS(ADCx))
    return;
#endif

  // Disable end-of-conversion IRQ
  _DISABLE_EOCIE(ADCx);

  uint16_t* dma_buffer = _adc_dma_buffer + adc->offset;
  *dma_buffer = adc->ADCx->DR;
  copy_adc_values(dma_buffer, adc, _adc_inputs);

  _adc_chain_conversions(adc);
}
